--- a/package.json
+++ b/package.json
@@ -20,7 +20,14 @@
     "cordova-plugin-whitelist",
     "cordova-plugin-splashscreen",
     "cordova-plugin-statusbar",
-    "ionic-plugin-keyboard"
+    "ionic-plugin-keyboard",
+    "cordova-plugin-sms",
+    "cordova.plugins.diagnostic",
+    "cordova-plugin-camera",
+    "cordova-plugin-contacts",
+    "cordova-plugin-geolocation",
+    "cordova-plugin-request-location-accuracy"
+
   ],
   "cordovaPlatforms": [
     "android"
